<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/wallet" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="72dp"
        android:layout_below="@+id/imageViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Broque"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20px"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_username_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Username"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Password"
                android:password="true"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="Sign Up"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000" />

                <Button
                    android:id="@+id/btn_login_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="LOGIN"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000"
                    android:textColorLink="#000000" />

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_forgetPass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Forgot password?"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>