...
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="LOGIN"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btn_register_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="Sign Up"
                    android:textColor="#000000" />
...
